--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+# Core
 streamlit==1.36.0
 pandas==2.2.2
 numpy==1.26.4
+
+# Visualisation
 plotly==5.22.0
 matplotlib==3.8.4
 seaborn==0.13.2
+
+# Machine Learning
 scikit-learn==1.4.2
 xgboost==2.0.0
