--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-# Core
+# Core Data Science & Web App
 streamlit==1.36.0
 pandas==2.2.2
 numpy==1.26.4
 
-# Visualisation
+# Machine Learning
+scikit-learn==1.3.2
+xgboost==1.7.6
+
+# Data Visualization
 plotly==5.22.0
 matplotlib==3.8.4
 seaborn==0.13.2
-
-# Machine Learning
-scikit-learn==1.4.2
-xgboost==2.0.0
